objects/APTS_MSPA_Information__c.object
<CustomObject>
    <fields>
        <fullName>ABBAgreementNumber__c</fullName>
        <label>ABB Agreement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABBCompanyNumber__c</fullName>
        <description>CLM Pilot - captures information about ABB company number</description>
        <formula>Agreement__r.ABB_company_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please provide the ABB company number</inlineHelpText>
        <label>ABB Company Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ABBLegalEntityName__c</fullName>
        <description>Legal Entity of ABB</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Agreement__r.ABB_legal_entity_name__c, Agreement__r.ABB_legal_entity_name__r.Name)</formula>
        <label>ABB Legal Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <formula>TEXT(Agreement__r.Country_Global__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <formula>Agreement__r.APTS_LP_AccountCustomer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_End_User__c</fullName>
        <formula>Agreement__r.APTS_Account_End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account End User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Information__c</fullName>
        <label>Account Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActivatedBy__c</fullName>
        <description>The user who activated the agreement in the system</description>
        <formula>Agreement__r.Apttus__Activated_By__c</formula>
        <label>Activated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementCategory__c</fullName>
        <formula>TEXT(Agreement__r.Apttus__Agreement_Category__c)</formula>
        <label>Agreement Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementEndDate__c</fullName>
        <description>The end date for this agreement</description>
        <formula>Agreement__r.Apttus__Contract_End_Date__c</formula>
        <inlineHelpText>Date until when the Agreement is valid.</inlineHelpText>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgreementLanguage__c</fullName>
        <formula>TEXT( Agreement__r.Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementStartDate__c</fullName>
        <description>The effective date of the agreement</description>
        <formula>Agreement__r.Apttus__Contract_Start_Date__c</formula>
        <inlineHelpText>Date from when the Agreement is valid, after the sign of with the customer.</inlineHelpText>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgreementSummary__c</fullName>
        <label>Agreement Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <label>Agreement Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <label>MSPA Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Owner__c</fullName>
        <formula>Agreement__r.Owner:User.FirstName + &quot; &quot; + Agreement__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Information</relationshipLabel>
        <relationshipName>MSPA_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmendmentEffectiveDate__c</fullName>
        <description>The date this amendment is effective</description>
        <formula>Agreement__r.Apttus__Amendment_Effective_Date__c</formula>
        <label>Amendment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApplicableCountries__c</fullName>
        <label>Applicable countries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_Regions__c</fullName>
        <formula>IF( INCLUDES( Agreement__r.Applicable_Regions__c , &quot;All Countries&quot;) , &quot;All Countries; &quot;, null) + 
IF( INCLUDES( Agreement__r.Applicable_Regions__c, &quot;EUC - Europe&quot;) , &quot;EUC - Europe; &quot;, null) + 
IF( INCLUDES( Agreement__r.Applicable_Regions__c , &quot;AMC - Americas&quot;) , &quot;AMC - Americas; &quot;, null) + 
IF( INCLUDES( Agreement__r.Applicable_Regions__c, &quot;AMA - Asia, Middle East &amp; Africa&quot;) , &quot;AMA - Asia, Middle East &amp; Africa; &quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicable Regions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <formula>TEXT( Agreement__r.Apttus_Approval__Approval_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoRenewTermMonths__c</fullName>
        <description>The number of months to extend the agreement</description>
        <formula>Agreement__r.Apttus__Auto_Renew_Term_Months__c</formula>
        <label>Renewal Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutoRenew__c</fullName>
        <formula>Agreement__r.Apttus__Auto_Renewal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewalConsent__c</fullName>
        <description>Indicates whether consent is required to extend / renew this agreement</description>
        <formula>Agreement__r.Apttus__Auto_Renew_Consent__c</formula>
        <label>Renewal Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewalTerms__c</fullName>
        <label>Renewal Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillToAddress__c</fullName>
        <description>Billing Address of the Account</description>
        <formula>Agreement__r.Bill_To_Address__c</formula>
        <inlineHelpText>Billing Address of the Account</inlineHelpText>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLMAgreementName__c</fullName>
        <label>Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>Release: R6-EP-CPQ, Requirement ID: 4515, ChangeDescription: it&apos;s used in APTS_AgreementTriggerHelper class</description>
        <formula>TEXT( Agreement__r.APTS_Channel_Class_Level1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Class Level1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>Release: R6-EP-CPQ, Requirement ID: 4515, ChangeDescription: it&apos;s used in APTS_AgreementTriggerHelper class</description>
        <formula>TEXT( Agreement__r.APTS_Channel_Class_Level2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Class Level2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDeliveryManager__c</fullName>
        <description>CLM - Pilot - This field captures the user who are Contract Delivery Manager</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Agreement__r.Contract_Delivery_Manager__c, Agreement__r.Contract_Delivery_Manager__r.FirstName+&quot; &quot;+Agreement__r.Contract_Delivery_Manager__r.LastName)</formula>
        <inlineHelpText>Please select the user who are Contract Delivery Manager</inlineHelpText>
        <label>Contract Delivery Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDurationDays__c</fullName>
        <description>The duration from Start Date to End Date in days</description>
        <formula>Agreement__r.Apttus__Contract_Duration_Days__c</formula>
        <label>Contract Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractedDays__c</fullName>
        <description>Days from Contract Start Date to Current Date if the contract is In Effect and Start Date is set.</description>
        <formula>Agreement__r.Apttus__Contracted_Days__c</formula>
        <label>Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerCompanyNumber__c</fullName>
        <description>Captures information about the Company Number of Customer</description>
        <formula>Agreement__r.Customer_Company_Number__c</formula>
        <inlineHelpText>Please enter the Customer Company Number</inlineHelpText>
        <label>Customer Company Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerContractNumber__c</fullName>
        <description>CLM Pilot - captures information about Customer contract number</description>
        <formula>Agreement__r.Customer_Contract_Number__c</formula>
        <inlineHelpText>Please provide the Customer contract number</inlineHelpText>
        <label>Customer Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSite__c</fullName>
        <description>CLM Pilot - captures information about Customer Site.</description>
        <formula>Agreement__r.Customer_Site__c</formula>
        <inlineHelpText>Please provide the Customer Site.</inlineHelpText>
        <label>Customer Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSupportEmailAddress__c</fullName>
        <description>CLM Pilot - captures information about Customer Support Email Address</description>
        <formula>Agreement__r.Customer_Support_Email_Address__c</formula>
        <inlineHelpText>Please provide the Customer Support Email Address</inlineHelpText>
        <label>Customer Support Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSupportPhoneNumber__c</fullName>
        <description>CLM Pilot - captures information about Customer Support Phone Number</description>
        <formula>Agreement__r.Customer_Support_Phone_Number__c</formula>
        <inlineHelpText>Please provide the Customer Support Phone Number</inlineHelpText>
        <label>Customer Support Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FFAgreementNumber__c</fullName>
        <description>Identifies the agreement number, including the version number. Use this field to display on screens, reports, dashboards, search filters and columns, etc. The other agreement number fields are for internal use only.</description>
        <inlineHelpText>Agreement Number</inlineHelpText>
        <label>Agreement Number (use in X-Author)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FulfillmentStatus__c</fullName>
        <description>CLM Pilot - captures information about Fulfillment Status</description>
        <formula>TEXT(Agreement__r.Fulfillment_Status__c)</formula>
        <inlineHelpText>Please select the Fulfillment Status</inlineHelpText>
        <label>Delivery Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalRenewalNotificationDays__c</fullName>
        <description>Notification period prior to Renewal Notice Date when notification is sent out internally that renewal is approaching</description>
        <formula>Agreement__r.Apttus__Internal_Renewal_Notification_Days__c</formula>
        <label>Internal Renewal Notification Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalRenewalStartDate__c</fullName>
        <description>Date by which internal notice of internal renewal is approaching – Issue Renewal Notice Date less internal renewal notification days</description>
        <formula>Agreement__r.Apttus__Internal_Renewal_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsInternalReview__c</fullName>
        <description>Indicates internal review was initiated</description>
        <formula>Agreement__r.Apttus__IsInternalReview__c</formula>
        <label>Is Internal Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leading_Business_Unit__c</fullName>
        <label>Leading Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leading_Division__c</fullName>
        <label>Leading Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leading_PG__c</fullName>
        <label>Leading PG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalContractReference__c</fullName>
        <formula>Agreement__r.Local_Contract_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Contract Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <description>CLM - Pilot - This field gives information about Milestones</description>
        <formula>Agreement__r.Milestones__c</formula>
        <inlineHelpText>Enter milestones information on agreements.</inlineHelpText>
        <label>Milestones</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Agreement Information</relationshipLabel>
        <relationshipName>Agreement_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerExpirationNotice__c</fullName>
        <description>To indicate the number of days prior to expiration date that a notification needs to be sent to the owner</description>
        <formula>TEXT(Agreement__r.Apttus__Owner_Expiration_Notice__c)</formula>
        <label>Owner Expiration Notice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerofAgreement__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;  Agreement__r.OwnerId,  Agreement__r.Owner:User.FirstName+&apos; &apos;+Agreement__r.Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAgreement__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Agreement__r.Apttus__Parent_Agreement__c, Agreement__r.Apttus__Parent_Agreement__r.Name)</formula>
        <label>Parent Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipatingDivisions__c</fullName>
        <label>Participating Divisions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_BusinessUnits__c</fullName>
        <label>Participating Business Units</label>
        <length>130560</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Perpetual__c</fullName>
        <description>Indicates whether agreement has an end date specified</description>
        <formula>Agreement__r.Apttus__Perpetual__c</formula>
        <label>Perpetual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;  Agreement__r.Apttus__Primary_Contact__c, Agreement__r.Apttus__Primary_Contact__r.FirstName+&quot; &quot;+Agreement__r.Apttus__Primary_Contact__r.LastName)</formula>
        <inlineHelpText>Associated with a primary contact for this agreement. The contact can be one of the contacts associated with either Account Customer, Primary Partner OR Account end user.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Customer__c</fullName>
        <formula>Agreement__r.APTS_LP_Account_End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Partner Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonforCancellationTerminationDet__c</fullName>
        <description>For capturing of more detailed information on the cancellation/termination.</description>
        <formula>Agreement__r.Reason_for_Cancellation_Termination_Det__c</formula>
        <label>Cancellation/Termination (Details)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonforTermination__c</fullName>
        <description>CLM - Reason for Termination is required to change the status to Terminated</description>
        <formula>TEXT(Agreement__r.Reason_for_Termination__c)</formula>
        <inlineHelpText>Indicates why an Agreement should be or is (to be) terminated</inlineHelpText>
        <label>Reason for Termination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordSubtype__c</fullName>
        <formula>TEXT(Agreement__r.Type_of_Change__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The link to the account record to identify the external party to this agreement</description>
        <inlineHelpText>Customer Account with which the agreement is to be signed</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Information</relationshipLabel>
        <relationshipName>Agreement_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemainingContractedDays__c</fullName>
        <description>If the agreement is In Effect, this value is calculated as Contract Duration Days less Contracted Days</description>
        <formula>Agreement__r.Apttus__Remaining_Contracted_Days__c</formula>
        <label>Remaining Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RenewalNoticeDays__c</fullName>
        <description>The number of days before end date when renewal notice is due</description>
        <formula>Agreement__r.Apttus__Renewal_Notice_Days__c</formula>
        <label>Renewal Notice Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <formula>Agreement__r.Apttus__Requestor__r.FirstName +&quot; &quot;+ Agreement__r.Apttus__Requestor__r.LastName</formula>
        <label>Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskReviewApprovalStatus__c</fullName>
        <description>Introduced as part of R3.0 for RR integration</description>
        <formula>Agreement__r.RR_Aproval_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Review Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskReviewID__c</fullName>
        <description>CLM - Pilot - This gives information about the Risk Review ID</description>
        <formula>Agreement__r.Risk_Review_ID__c</formula>
        <label>Local Risk Review ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskReviewRequired__c</fullName>
        <description>CLM - Pilot - This gives information about the Risk Review Required</description>
        <formula>Agreement__r.Risk_Review_Required__c</formula>
        <label>Risk Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Review_ID__c</fullName>
        <formula>Agreement__r.Risk_Review_ID_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fetched from the Risk Review database if a Risk Review is initiated from this Agreement. Ensure that also the Risk Review Required box is ticked.</inlineHelpText>
        <label>Risk Review ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Review_Project_Status__c</fullName>
        <description>Introduced as part of R3.0 for RR integration</description>
        <formula>Agreement__r.RR_Project_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Review Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <formula>Agreement__r.APTS_LP_Sales_Person__r.FirstName + &quot; &quot; + Agreement__r.APTS_LP_Sales_Person__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToAddress__c</fullName>
        <description>Postal/ Shipping Address of the Account</description>
        <formula>Agreement__r.Ship_To_Address__c</formula>
        <inlineHelpText>Postal/ Shipping Address of the Account</inlineHelpText>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialTerms__c</fullName>
        <label>Special Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StatusCategory__c</fullName>
        <description>The higher level state of the agreement – In Authoring, In Effect, Expired, etc.  These are Apttus reserved values and cannot be changed.</description>
        <formula>TEXT(Agreement__r.Apttus__Status_Category__c)</formula>
        <label>Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Agreement__r.Apttus__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <formula>TEXT( Agreement__r.Apttus__Subtype__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportingPG__c</fullName>
        <label>Participating PGs</label>
        <length>130560</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Branding__c</fullName>
        <formula>TEXT(Agreement__r.Template_Branding__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Branding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermMonths__c</fullName>
        <description>Indicates the duration in months of the contract from the start date</description>
        <formula>Agreement__r.Apttus__Term_Months__c</formula>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TerminationComments__c</fullName>
        <label>Termination Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TerminationDate__c</fullName>
        <description>Date contract terminated</description>
        <formula>Agreement__r.Apttus__Termination_Date__c</formula>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TerminationNoticeDays__c</fullName>
        <description>Notice period prior to termination</description>
        <formula>Agreement__r.Apttus__Termination_Notice_Days__c</formula>
        <label>Termination Notice Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TerminationNoticeIssueDate__c</fullName>
        <description>Date termination notice was sent / received</description>
        <formula>Agreement__r.Apttus__Termination_Notice_Issue_Date__c</formula>
        <label>Termination Notice Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <formula>Agreement__r.Apttus__Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <formula>Agreement__r.Apttus__Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Agreement Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Country__c</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Agreement_Name__c</columns>
        <columns>Account_Customer__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Valid_From__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Global_Frame_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Name__c</columns>
        <columns>RelatedAccount__c</columns>
        <columns>ApplicableCountries__c</columns>
        <columns>Applicable_Regions__c</columns>
        <columns>StatusCategory__c</columns>
        <columns>AgreementEndDate__c</columns>
        <columns>Perpetual__c</columns>
        <columns>ABBAgreementNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>APTS_MSPA_Information__c.APTS_CCP_Frame_Agreement_Open,APTS_MSPA_Information__c.APTS_CCP_Frame_Agreement_Superseded,APTS_MSPA_Information__c.Frame_Agreement</value>
        </filters>
        <filters>
            <field>AgreementCategory__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Frame Agreements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MI-{0000000}</displayFormat>
        <label>MSPA Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Information</pluralLabel>
    <recordTypes>
        <fullName>APTS_CCP_Frame_Agreement_Open</fullName>
        <active>true</active>
        <label>CCP Frame Agreement Open</label>
    </recordTypes>
    <recordTypes>
        <fullName>APTS_CCP_Frame_Agreement_Superseded</fullName>
        <active>true</active>
        <label>CCP Frame Agreement Superseded</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deal_Agreement_Products_and_or_Services</fullName>
        <active>true</active>
        <description>This record type is to create Deal (Products and/or Services) Agreement.</description>
        <label>Deal Agreement (Products and/or Services)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Frame_Agreement</fullName>
        <active>true</active>
        <description>This record type is to create Frame Agreement.</description>
        <label>Frame Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>NDA</fullName>
        <active>true</active>
        <description>This record type is to create Non-Disclosure Agreement.</description>
        <label>NDA</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>